# hs-clasification

./: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
app/: config.py  db.py  eval.py  main.py
app/ingestion/: __init__.py  __main__.py  atar_loader.py  base.py  ebti_loader.py  embed_rulings.py  embedder.py  eu_loader.py  uk_loader.py
app/models/: __init__.py  classification_request.py  embedding.py  enums.py  eval_run.py  legal_note.py  nomenclature_node.py  ruling.py
app/pipeline/: __init__.py  calibration.py  classifier.py  confidence.py  extraction.py  ranking.py  retrieval.py  rules.py  validation.py
app/schemas/: classify.py
docs/: cn.xlsx  specification.md
tests/: test_m1_schema.py  test_m2_ingestion.py  test_m3_rulings.py  test_m4_pipeline.py  test_m5_pipeline.py  test_m6_calibration.py
